# flaui-uiautomation-wrapper

./: .appveyor.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  10-DAY-ROADMAP.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  ROADMAP.md  TEST_PORTING_SUMMARY.md  config.py  flaui-uiautomation-wrapper.code-workspace  playingaround.py  pyproject.toml  pytest.xml  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements-unit-test.txt  requirements.txt  setup.cfg  setup.py  test-results.xml  to-do.md  versioneer.py
.github/: CODEOWNERS  copilot-instructions.md  labeler.yml  pull_request_template.md  release-drafter.yml  release.yml
.github/instructions/: flaui-python-mapping.instructions.md  mkdocs-docs.instructions.md  test-mapping.instructions.md
.github/prompts/: add-test.prompt.md  mkdocs-docs.prompt.md  port-csharp-class.prompt.md
.github/workflows/: labeler.yml  pr-checks.yml  python-package.yml  python-publish.yml
.github/workflows/.github/workflows/: draft-release.yml
docs/: Basic Usage.ipynb  bug-tracking.md  contributing.md  index.md  motivation.md  usage_advanced.md  usage_basic.md
flaui/: plalyingaround.py
flaui/core/: application.py  automation_element_extensions.py  automation_elements.py  automation_type.py  cache_request.py  condition_factory.py  definitions.py  framework_types.py  input.py  tools.py  windows_api.py
flaui/lib/: cast_type_converter.py  collections.py  config.py  element_classes.py  enums.py  exceptions.py  pythonnet_bridge.py  threading_utils.py
flaui/lib/system/: drawing.py  timespan.py
flaui/modules/: automation.py
flaui/robot/automation/: uia.py  uia2.py  uia3.py
flaui/robot/exception/: __init__.py  flauierror.py
flaui/robot/interface/: __init__.py  moduleinterface.py  windowsautomationinterface.py
flaui/robot/keywords/: application.py  combobox.py  element.py
flaui/robot/module/: __init__.py  application.py  combobox.py  debug.py  element.py  grid.py  keyboard.py  mouse.py  screenshot.py  selector.py  tab.py  textbox.py  tooglebutton.py  tree.py  window.py
flaui/robot/util/: __init__.py  converter.py  keyboardinputconverter.py  treeitems.py  treeitemsparser.py
flaui/wrapper_generator/: main.py  tools.py
flaui/wrappers/: pythonnet_bridge.ipynb  ui_automation.py  uia.py
flaui/wrappers/core/: applicaiton.py  application.py  automation.py  automation_element_extensions.py  automation_elements.py
flaui/wrappers_temp/: __init__.py
notebooks/: application_launch.ipynb  auto_generate_wrappers.ipynb  bank_system_application.ipynb  playingaround.ipynb
src/flaui/: _version.py
src/flaui/lib/: cast_type_converter.py  pythonnet_bridge.py
src/flaui/wrappers/: sample.py  ui_automation.py
src/flaui/wrappers/core/: automation.py  automation_element_extensions.py  automation_elements.py
src/integration_tests/: test_plan.py
src/integration_tests/bank_system/: bank_system_main_window_tests.py
src/notebooks/: auto_generate_wrappers.ipynb  bank_system_application.ipynb
src/unit_tests/flaui/lib/: test_pythonnet_bridge.py
tests/: README.md  config.py  conftest.py  test_sample.py
tests/assets/: config.py  utils.py
tests/assets/element_map/wpf_application/: base.py  common.py  complex_controls.py  constants.py  menu.py  more_controls.py  simple_controls.py  title_bar.py
tests/assets/elements/wpf_application/: base.py  complex_controls.py  constants.py  more_controls.py  simple_controls.py
tests/core/: test_application.py  test_automation_elements.py
tests/integration/: __init__.py  test_calculator.py
tests/lib/: test_collections.py  test_enums.py  test_pythonnet_bridge.py
tests/lib/system/: test_drawing.py
tests/modules/: test_automation.py
tests/sample/: conftest.py  test_sample.py
tests/test_applications/: download_test_applications.py
tests/test_utilities/: base.py  config.py  os_platform.py
tests/test_utilities/elements/winforms_application/: __init__.py  base.py  common.py  complex_controls.py  constants.py  menu.py  more_controls.py  simple_controls.py  title_bar.py
tests/test_utilities/elements/wpf_application/: __init__.py  base.py  common.py  complex_controls.py  constants.py  menu.py  more_controls.py  simple_controls.py  title_bar.py
tests/testplan/integration_tests/drivers/: bank_system.py
tests/ui/: conftest.py  test_application.py  test_value_converter.py
tests/ui/core/: conftest.py  test_application.py  test_cache.py  test_getter.py  test_keyboard.py  test_mouse.py  test_search.py  test_value_converter.py  test_xpath.py
tests/ui/core/automation_elements/: test_automation_element.py  test_calender.py  test_checkbox.py  test_combobox.py  test_data_grid_view.py  test_date_time_picker.py  test_grid.py  test_label.py  test_listbox.py  test_menu.py  test_pop_up.py  test_progress_bar.py  test_radio_button.py  test_slider.py  test_spinner.py  test_tab.py  test_table.py  test_textbox.py  test_tree.py  test_value_converter.py  test_window.py
tests/ui/core/converters/: test_value_converter.py
tests/unit/lib/: test_collections.py  test_enums.py  test_pythonnet_bridge.py  test_retry.py
tests/unit/modules/: test_automation.py
tests/unit_tests/core/: conftest.py  test_application.py  test_automation_elements.py
tests/unit_tests/lib/: test_collections.py  test_enums.py  test_pythonnet_bridge.py
tests/unit_tests/modules/: test_automation.py
tests/unit_tests/ui_tests/: conftest.py  test_application.py
tests/wrappers/core/: test_application.py  test_automation_elements.py
typings/FlaUI-stubs/Core/: __init__.pyi
typings/System-stubs/: Collections.pyi  ComponentModel.pyi  Data.pyi  Globalization.pyi  IO.pyi  Reflection.pyi  __init__.pyi
typings/System-stubs/Configuration/: Assemblies.pyi  __init__.pyi
typings/System-stubs/Runtime/: CompilerServices.pyi  InteropServices.pyi  Remoting.pyi  Serialization.pyi  __init__.pyi
typings/System-stubs/Security/: Policy.pyi  __init__.pyi
typings/System-stubs/Threading/: Tasks.pyi  __init__.pyi
typings/System-stubs/Xml/: Schema.pyi  Serialization.pyi  __init__.pyi
(+47 files in other folders)
